Change Log for OpenXava project
===============================

- Fix: IJDBCCalculator for a @DefaultValueCalculator in a cascade remove collection element fails.
- Fix: @DefaultValueCalculator dependent on other properties does not work for references.
- Fix: Removing from a @ManyToMany deletes the element if it's also referenced from an aggregate collection.  
- Fix: LocalDate editor too long for a date.
- Fix: After generating a PDF the current entity is reloaded losing the changes if it has single key.
- Fix: Broken links in menus of the Spanish reference guide. 
- Fix: Single action with icon and no image is not shown in top button bar that is missing.
- Fix: View.setEditable(member, editable) does not work for references.
- Fix: Value with quotation marks in @DescriptionsList is only displayed until the first quotation.
- Fix: Warning messages are not very legible.
- Lesson 2 of course upgraded to OpenXava 6.
- Fix: Ant target for generating portlets hangs.
- Label aligned on top when editor height is greater than usual.
- Fix: @DescriptionsList and list with multiple values in the same line is not well displayed.
- Fix: Search in @DescriptionsList not work with composite description and fields with several trailing spaces.
- Fix: @DescriptionsList with a composite description show all the existing spaces between fields. 
- Fix: Calendar icon covers up the name of the action when user as action icon. 
- Added documentation about overwriting go list action to reference guide (controllers chapter).
- Fix: Overwriting the go list action, the Mode.list action via mode-controller, does not work.
- Fix: Actions added/removed via addActions()/removeActions() to the module are lost after closing a dialog.
- Fix: Read only reference to an entity with a single reference as key which is not included in the view fails.
- Fix: IMAGES_GALLERY stores all the images in the default catalog with MySQL.
- Fix: XHibernate.setDefaultSchema() does not work for MySQL.